# Veridia-RAG-Platform

./: README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  config.yaml  index.html  pyproject.toml  test_e2e_api.py
.github/workflows/: deploy-docs.yml
404/: index.html
_next/static/chunks/: 0bwimgc081m7a.js  0iuiqhtoth-y2.js  0md86x42.cjh8.css  17c-21-.nozzq.js
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.txt
api-reference/: __next._full.txt  __next._tree.txt  __next.api-reference.__PAGE__.txt  index.html
architecture/: __next._index.txt  __next._tree.txt  __next.architecture.__PAGE__.txt  index.html  index.txt
chunking/: __next._tree.txt  __next.chunking.__PAGE__.txt  __next.chunking.txt  index.html  index.txt
docs-site/: next.config.ts
docs-site/src/app/: page.tsx
docs-site/src/app/api-reference/: page.tsx
docs-site/src/components/: DocsLayout.tsx
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
retrieval/: __next._full.txt  __next._tree.txt  __next.retrieval.__PAGE__.txt  index.html
setup/: __next._full.txt  __next._tree.txt  __next.setup.__PAGE__.txt  index.html
src/: pipeline.py
src/api/: app.py  routes.py  schemas.py
src/ingestion/: pipeline.py
strategies/: __next._full.txt  __next._tree.txt  __next.strategies.__PAGE__.txt  index.html
workflow/: __next._full.txt  __next._tree.txt  __next.workflow.__PAGE__.txt  index.html
