[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridia-rag"
version = "0.1.0"
description = "Veridia RAG — Production-grade Retrieval-Augmented Generation system built from scratch"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Veridia Team"},
]

dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "ollama>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "markdown>=3.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
